--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h2 {
 .article-large {
   width: 50vw;
   margin: 30px;
+  margin-bottom: 50px;
   margin-left: 25vw;
   padding: 20px;
   display: flex;
@@ -27,6 +28,10 @@ h2 {
   justify-content: center;
   outline: 2px solid #A2D9CE;
 }
+.retour {
+  text-align: center;
+}
+
 @media screen and (max-with : 1024px) {
   
 }
@@ -57,7 +62,7 @@ footer {
   text-align: center;
   background-color: #A2D9CE;
   padding: 10px;
-  height: 50px;
+  height: 100px;
 }
 .copyright {
   color: white;
